--- a/docker-compose.yml
+++ b/docker-compose.yml
@@ -23,6 +23,7 @@ services:
       - ./frontend/pages/:/app/pages/:rw
       - ./frontend/public/:/app/public/:rw
       - ./frontend/server/:/app/server/:rw
+      - ./frontend/components/:/app/components/:rw
       - ./frontend/app.vue:/app/app.vue:rw
       - ./frontend/.env:/app/.env:rw
       - ./frontend/package.json:/app/package.json:rw
