--- a/docker-compose.yml
+++ b/docker-compose.yml
@@ -25,6 +25,7 @@ services:
       - ./frontend/server/:/app/server/:rw
       - ./frontend/components/:/app/components/:rw
       - ./frontend/types/:/app/types/:rw
+      - ./frontend/contexts/:/app/contexts/:rw
       - ./frontend/app.vue:/app/app.vue:rw
       - ./frontend/.env:/app/.env:rw
       - ./frontend/package.json:/app/package.json:rw
