--- a/docker-compose.yml
+++ b/docker-compose.yml
@@ -38,9 +38,9 @@ services:
       POSTGRES_DB: wahoot_db
       POSTGRES_USER: wahoot
       POSTGRES_PASSWORD: wahoot
-      PGDATA: customDataFolder
+      PGDATA: /var/lib/postgresql/data/customDataFolder
     volumes:
-      - ./dbData/:/var/lib/postgresql/data/customDataFolder
+      - ./dbData/:/var/lib/postgresql/data
     ports:
       - 5432:5432
     healthcheck:
