--- a/docker-compose.yml
+++ b/docker-compose.yml
@@ -34,17 +34,13 @@ services:
   db:
     image: postgres
     restart: always
-    environment:
-      POSTGRES_DB: wahoot_db
-      POSTGRES_USER: wahoot
-      POSTGRES_PASSWORD: wahoot
-      PGDATA: /var/lib/postgresql/data/customDataFolder
+    env_file: .env
     volumes:
       - ./dbData/:/var/lib/postgresql/data
     ports:
       - 5432:5432
     healthcheck:
-      test: ["CMD-SHELL", "pg_isready -d wahoot_db -U wahoot"]
+      test: ["CMD-SHELL", "pg_isready -d ${POSTGRES_DB} -U ${POSTGRES_USER}"]
       interval: 5s
       timeout: 5s
       retries: 10
