--- a/.env.sample
+++ b/.env.sample
@@ -3,4 +3,5 @@
 POSTGRES_DB=database_name
 POSTGRES_USER=database_user
 POSTGRES_PASSWORD=database_password
+# This last environement variable shouldn't be modified
 PGDATA=/var/lib/postgresql/data/customDataFolder
