--- a/frontend/package.json
+++ b/frontend/package.json
@@ -14,7 +14,8 @@
     "jwt-decode": "^4.0.0",
     "nuxt": "^3.11.1",
     "vue": "^3.4.21",
-    "vue-router": "^4.3.0"
+    "vue-router": "^4.3.0",
+    "vue3-toastify": "^0.2.1"
   },
   "devDependencies": {
     "@nuxtjs/apollo": "^5.0.0-alpha.13",
