--- a/frontend/package.json
+++ b/frontend/package.json
@@ -22,7 +22,8 @@
     "@nuxt/test-utils": "^3.12.1",
     "@nuxtjs/apollo": "^5.0.0-alpha.13",
     "@nuxtjs/tailwindcss": "^6.11.4",
-    "@testing-library/vue": "^8.0.3",
+    "@testing-library/jest-dom": "^6.4.6",
+    "@testing-library/vue": "^8.1.0",
     "@types/jest": "^29.5.12",
     "@vue/test-utils": "^2.4.6",
     "@vue/vue3-jest": "^29.2.6",
