--- a/frontend/tsconfig.json
+++ b/frontend/tsconfig.json
@@ -2,6 +2,7 @@
   // https://nuxt.com/docs/guide/concepts/typescript
   "extends": "./.nuxt/tsconfig.json",
   "compilerOptions": {
+    "verbatimModuleSyntax": false,
     "types": ["@types/node", "@nuxt/vue-app", "@types/jest"]
   }
 }
