--- a/frontend/package.json
+++ b/frontend/package.json
@@ -35,6 +35,7 @@
     "jest-transform-stub": "^2.0.0",
     "jsdom": "^24.0.0",
     "ts-jest": "^29.1.2",
+    "ts-node": "^10.9.2",
     "typescript": "^5.4.5"
   }
 }
